# cutlass

./: .gitignore  README.md  dataset.xlsx  pyproject.toml  result.xlsx
.github/workflows/: black.yml  krypto.yml  test.yml
cutlass/: __main__.py  cli.py  parse.py
tests/: conftest.py  test_cli.py  test_cutlass.py  test_parse.py
