[tool.poetry]
name = "cutlass"
version = "0.1.0"
description = "Parse international phone numbers the right way."
authors = ["antoniouaa <antoniouaa@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
taskipy = "^1.8.1"
black = "^21.7b0"
pytest-cov = "^2.12.1"
coveralls = "^3.2.0"

[tool.taskipy.tasks]
test = { cmd = "pytest -vvv --cov=cutlass", help = "Run all the tests"}

[tool.poetry.scripts]
krypto = "krypto:cli"

[tool.krypto]
prefix = "TODO"
attach-issue = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
