[tool.poetry]
name = "cutlass"
version = "0.1.0"
description = "Parse international phone numbers the right way."
authors = ["antoniouaa <antoniouaa@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.1"
openpyxl = "^3.0.7"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
taskipy = "^1.8.1"
black = "^21.7b0"
pytest-cov = "^2.12.1"
coveralls = "^3.2.0"

[tool.taskipy.tasks]
test = { cmd = "pytest -vvv --cov=cutlass", help = "Run all the tests"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
